sesion6/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend
  labels:
    app:  server-frontend
spec:
  selector:
    matchLabels:
      app: server-frontend
  template:
    metadata:
      labels:
        app:  server-frontend
    spec:
      containers:
      - name:  server-frontend
        image:  nginx:latest
        ports:
        - containerPort:  80
