sesion6/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-front
spec:
  selector:
    app: server-frontend
  type: NodePort
  ports:
  - name: server-frontend
    protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30007
