sesion6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-front
spec:
  selector:
    app: server-frontend
  type: ClusterIP
  ports:
  - name: server-frontend
    protocol: TCP
    port: 80
    targetPort: 80
