sesion6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-front
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "sesion6.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cluster-front
            port:
              number: 8080
